--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-spinners-kit": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
